# kirok-mcp

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: README_ja.md  architecture.md  tools-reference.md
skills/ceremonial-rescue-jp/: SKILL.md
skills/ceremonial-rescue-jp/assets/templates/: absence_notice.md  belated_condolence.md  celebration_message.md  checklist_template.md  company_notice.md  condolence_email.md  mourning_postcard.md  new_year_card.md  seasonal_gift.md  speech_template.md  telegram_funeral.md  telegram_wedding.md
skills/ceremonial-rescue-jp/references/: company_mode.md  etiquette.md  ng_words.md
skills/ceremonial-rescue-jp/scripts/: amount_validator.py  date_validator.py  ng_word_checker.py
skills/friendly-guide/: SKILL.md
skills/kirok/: SKILL.md
skills/skill-creator/: SKILL.md
skills/skill-creator/scripts/: init_skill.py
src/kirok_mcp/: __init__.py  db.py  diagnostics.py  embeddings.py  llm.py  server.py
src/kiroku_mcp/: __init__.py  db.py  embeddings.py  llm.py  server.py
tests/: test_db.py  test_diagnostics.py  test_embeddings.py  test_server.py
